<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.allenrajumathew.firebasechatapp.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settings_display_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/setting_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hi_there_i_m_using_a_chat_app"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/setting_image_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setting_status_btn"
        android:layout_alignStart="@+id/setting_status_btn"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/change_image"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/setting_status_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/change_status"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
