<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.allenrajumathew.firebasechatapp.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome_to_lapit_n_chat_app"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_alignStart="@+id/start_reg_btn"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>
