<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.allenrajumathew.firebasechatapp.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/default_avatar" />

    <TextView
        android:id="@+id/profile_diaplay_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_diaplay_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/user_status"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/profile_friend_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_friend_request_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/total_friends"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_friend_request_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_decline_friend_request_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_decline_friend_request_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Decline Friend Request"
        android:textColor="@android:color/white" />


</RelativeLayout>
